--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -6,6 +6,25 @@
         {{ dropzone.load_css() }}
         {{ dropzone.load_js() }}
         {{ dropzone.style('border: 2px dashed #0087F7; margin: 10px 0; min-height: 150px;') }}
+        <script>
+            // Dropzoneの設定
+            Dropzone.options.uploadZone = {
+                init: function() {
+                    this.on("success", function(file, response) {
+                        // アップロード成功時にページをリロード
+                        location.reload();
+                    });
+                    this.on("error", function(file, errorMessage) {
+                        // サーバーからのエラーメッセージを表示
+                        let errorResponse = errorMessage;
+                        if (errorMessage && errorMessage.error) {
+                            errorResponse = errorMessage.error;
+                        }
+                        alert("アップロードに失敗しました: " + errorResponse);
+                    });
+                }
+            };
+        </script>
     </head>
     <body>
         <h1>{{ category.name }} - 論文一覧</h1>
